# hrc_case_study

./: .gitignore  README.md
hrc_case_study_configurations/: CMakeLists.txt  package.xml
hrc_case_study_configurations/config/: controllers_configurations.yaml  ur10e_hw.yaml
hrc_case_study_configurations/launch/: control.rviz  fake_start.launch  moveit.launch  real_start.launch  robot_control.launch  rviz.launch  start.launch  urscript.launch
hrc_case_study_descriptions/: CMakeLists.txt  package.xml
hrc_case_study_descriptions/config/: both_agents_bottle_distributions.yaml  bottle_distributions.yaml  joint_limits.yaml  robot_bottle_distributions.yaml  user_bottle_distributions.yaml
hrc_case_study_descriptions/launch/: bagplay.launch  bagplay_eut.launch  calib.launch  log.launch  test.launch  upload.launch  ur10e_upload.launch
hrc_case_study_descriptions/mesh/: bottle.STL  box.STL  eurobox.STEP  eurobox.stl  eurobox_2.STL  notebook.STL  working_table_with_wheels.STL
hrc_case_study_descriptions/urdf/: bottle.urdf.xacro  bottles_pack.urdf.xacro  box.urdf.xacro  eurobox.urdf.xacro  eurobox.xacro  notebook.urdf  notebook.urdf.xacro  notebook.xacro  sharework_cell.urdf.xacro  sharework_cembre.xacro  sharework_cembre_simplified.xacro  working_table.urdf  working_table.urdf.xacro
hrc_case_study_moveit_config/: .setup_assistant  CMakeLists.txt  (+1 more)
hrc_case_study_safety/: CMakeLists.txt  package.xml
hrc_case_study_safety/config/: area_safety_config.yaml  thor_safety.yaml
hrc_case_study_safety/launch/: safety.launch  safety_areas_base.launch  safety_mediapipe.launch  safety_on_areas.launch  thor_safety.launch
hrc_case_study_safety/script/: area_pub.py
(+91 files in other folders)
