<?xml version="1.0"?>
<package format="2">
  <name>hrc_case_study_configurations</name>
  <version>0.0.0</version>
  <description>The hrc_case_study_configurations package</description>


  <maintainer email="samuele.sandrini@polito.it">Samuele Sandrini</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
