<?xml version="1.0"?>
<package format="2">
  <name>hrc_case_study_descriptions</name>
  <version>0.0.0</version>
  <description>The hrc_case_study_descriptions package</description>

  <maintainer email="samuele.sandrini@polito.it">Samuele</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>robotiq_2f_85_gripper_visualization</depend>
  <depend>ur_description</depend>
  <depend>realsense2_description</depend>
  <depend>ur10e_robotiq_simplified_description</depend>
  <depend>agni_tf_tools</depend>

  <export>
  </export>
</package>
